# TimerMaster

./: .gitignore  .reasonixrc  README.md  index.html  package-lock.json  package.json  updater.json
.github/workflows/: release.yml
docs/: README.md  updater.json
scripts/: build-and-release.py  sign_and_generate_updater.py
src/: App.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  timer.rs
src/components/: CreateTask.tsx  RepeatingReminder.tsx  RunningTimers.tsx  Settings.tsx  SingleTimer.tsx  Stats.tsx  TaskList.tsx  Toast.tsx
src/styles/: App.css
